Document duplicated name prevented with attachements section aligned

--- a/app/assets/stylesheets/droom.css.sass
+++ b/app/assets/stylesheets/droom.css.sass
@@ -1071,6 +1071,14 @@ ul.checklist
     &.robot
       display: none
 
+span.delete
+  margin: 10px;
+  background: red;
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 100%;
+  cursor: pointer;
+
 
 @import droom/columns
 @import droom/datepicker
